@@ -1,3 +1,6 @@
+[B]4.0.0[/B]
+- added: uniqueids and ratings with their name
+
 [B]3.9.2[/B]
 - added: some new languages
 
